tests/errors/assertion.ensureWithCustomMessage.res
>> Assertion | "Wrong calc": [0 = 1 + 1]
       error | 
